--- a/aws/buildspec.yml
+++ b/aws/buildspec.yml
@@ -1,3 +1,6 @@
+##Aws tutorial
+#https://aws.amazon.com/blogs/devops/how-to-create-an-ami-builder-with-aws-codebuild-and-hashicorp-packer/
+
 ---
 version: 0.2
 
