--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,4 +6,4 @@ phases:
       - unzip packer.zip
   build:
     commands:
-      - ./packer build webserver.json
+      - ./packer build aws-ubuntu.pkr.hcl
